# yoyoML

./: .gitignore  ENGINEER_README.md  ISLANDS.md  LICENSE  OPERATOR_README.md  README.md  checklist.md  inspect_data.py  pyproject.toml  recommend_models.py  requirements.txt
collator_island/: README.md  browser_plan.md  config.md  requirements.txt  run_collator_probes.py
collator_island/browser_ui/: app.js  index.html  styles.css
collator_island/examples/: mlp.toml  mlp.yaml  project.toml  project.yaml
collator_island/mmtool/: __init__.py  assembler.py  cli.py  codegen.py  config_io.py  db.py  errors.py  generate.py  probe_runner.py  snippets.py  specs.py  templates.py  validation.py
collator_island/snippet_db/: snippets.sqlite
collator_island/txt_store/cnn/: build_head.txt  conv_block_spec.txt  head_spec.txt  make_norm.txt  make_pool.txt  safe_num_groups.txt  vanilla_cnn.txt
collator_island/txt_store/common/: imports_torch.txt  make_activation.txt  type_aliases.txt
collator_island/txt_store/config/: cnn_pipeline.txt  data_common.txt  find_pipeline_config.txt  from_dict.txt  imports.txt  load_config.txt  mlp_pipeline.txt  mtl_pipeline.txt  optim_train.txt
collator_island/txt_store/criteria/: base.txt  bce.txt  ce.txt  mse.txt  (+2 more)
contracts/: README.md  diagnostic_bundle.v1.schema.json  loop_decision_bundle.v1.schema.json  probe_request_bundle.v1.schema.json  probe_result_bundle.v1.schema.json  recommendation_bundle.v1.schema.json
ingestor_island/: README.md
model_selector_island/: README.md
sample_data/: config.yaml  data.sqlite  data.xml  key_values.txt  nested.json  people.csv  people.tsv  people_semicolon.csv  records.json  records.jsonl  settings.ini  table.html  table.xlsx  vital_12_diagnostics.csv
scripts/: generate_test_data.py  test_feedback_loop_e2e.py
src/data_inspector/: __init__.py
(+68 files in other folders)
